# financial-portfolio-builder

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
backend/: Cargo.toml  schema.md
backend/src/: cache.rs  calculations.rs  main.rs  utils.rs
backend/src/routes/: finances.rs  mod.rs  quotes.rs  stats.rs
backend/src/services/: fetching.rs  finances.rs  mod.rs  stats.rs
backend/src/tests/: calculations.rs
shared/: Cargo.toml
shared/bindings/: Candle.ts  QuoteQuery.ts
shared/src/: lib.rs  models.rs
src/app/: page.tsx
src/app/finances/: page.tsx
src/app/finances/[ticker]/: page.tsx
src/components/: dateTimePicker.tsx
src/components/ui/: chart.tsx
src/lib/: statics.ts  utils.ts
