[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
http = "1.3.1"
json = "0.12.4"
lazy_static = "1.5.0"
moka = { version = "0.12.11", features = ["sync"] }
polars = { version = "0.51.0", features = ["lazy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { version = "0.1.0", path = "../shared" }
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tokio-test = "0.4.4"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
yahoo_finance_api = "4.1.0"
